# civ-ipriot-smiley

./: .gitignore  Makefile  angry.py  blinkable.py  happy.py  justfile  knowledge_and_evidence-v2.md  knowledge_and_evidence.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sad.py  sense_hat.py  smiley.py  test.py  transition.py  type_shed.py
